@@ -1,8 +1,10 @@
 MD5 1c7e0d2aa04c9469f2b742b6f04dd060 ChangeLog 1183
 MD5 1bbef714ca6777097fa1a0abbbce49e4 PEAR-DB-1.3.ebuild 620
 MD5 804325535dd5ff2bebc4349724f1c2e6 PEAR-DB-1.5.0_rc2.ebuild 362
-MD5 abda3d723ca598c2ce406ebd4058c045 PEAR-DB-1.6.1.ebuild 359
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
+MD5 abda3d723ca598c2ce406ebd4058c045 PEAR-DB-1.6.1.ebuild 359
+MD5 abda3d723ca598c2ce406ebd4058c045 PEAR-DB-1.6.4.ebuild 359
 MD5 a39b82ee683619cd093a715f07e74d0c files/digest-PEAR-DB-1.3 54
 MD5 57399dbb707cf8d7ba0ed9a38f46bb77 files/digest-PEAR-DB-1.5.0_rc2 59
 MD5 75dfa06b8143a11335fcedfffa792f05 files/digest-PEAR-DB-1.6.1 56
+MD5 70acfe99c24913a886276101d04b2fae files/digest-PEAR-DB-1.6.4 56
